# input0

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  cliff.toml
.github/workflows/: release.yml
docs/: architecture.md  feature-add-stt-models.md  feature-auto-update.md  feature-custom-prompt.md  feature-model-switching.md  feature-prompt-eval-suite.md  feature-prompt-optimization.md  feature-single-key-hotkey.md  feature-text-structuring.md  feature-vocabulary.md  landing-page-brief.md  research-local-stt-models.md
docs/superpowers/plans/: 2026-04-25-single-key-hotkey.md  2026-04-29-custom-prompt.md
landing-page/: index.html  wrangler.jsonc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: DESIGN_NOTES.md  lib.rs  main.rs  pipeline.rs
src-tauri/src/audio/: capture.rs
src-tauri/src/commands/: input.rs  llm.rs  models.rs  window.rs
src-tauri/src/config/: mod.rs  tests.rs
src-tauri/src/input/: fn_monitor.rs  hotkey.rs  mod.rs  single_key_monitor.rs  tests.rs
src-tauri/src/llm/: client.rs  mod.rs  template.rs  tests.rs
src-tauri/src/models/: manager.rs  registry.rs  tests.rs
src-tauri/src/stt/: fire_red_asr_backend.rs  mod.rs  sensevoice_backend.rs
src-tauri/tests/: prompt_eval.rs
src-tauri/tests/data/: prompt_eval_cases.json
src/components/: CustomPromptPanel.tsx  SettingsPage.tsx  Sidebar.tsx
src/i18n/: en.ts  types.ts  zh.ts
src/pages/: Settings.tsx
src/stores/: settings-store.ts
