[package]
name = "input0"
version = "0.3.1"
edition = "2021"

[lib]
name = "input0_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.14", features = ["metal"] }  # TODO: enable after initial scaffold
cpal = "0.15"
rubato = "0.16"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
arboard = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
toml = "0.8"
log = "0.4"
sherpa-onnx = "1.12"
rfd = "0.15"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2"
mimalloc = { version = "0.1", default-features = false }
regex = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
# The `objc` crate 0.2's msg_send!/class! macros reference cfg(feature = "cargo-clippy")
# which triggers unexpected_cfgs warnings on newer Rust. Suppress until we migrate to objc2.
unexpected_cfgs = "allow"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
dispatch2 = "0.3"
block = "0.1.6"
core-foundation = "0.10"
core-graphics = "0.24"
